--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
     id 'kotlin-kapt'
+
 }
 
 android {
@@ -60,6 +61,7 @@ dependencies {
 
     // navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -77,5 +79,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-
+    // notifications
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0' // Firebase Cloud Messaging (FCM) dependency
 }
